// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Slider Custom Colors 1`] = `
.c0 {
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  background: linear-gradient( to right,#00D200 0% 50%,#EBEBE8 50% 100% );
  height: 12px;
  max-width: 100%;
  width: 100%;
  cursor: default;
}

.c2 {
  max-width: 100%;
  height: 12px;
  position: relative;
  width: calc( 100% - 30px );
  margin: 0 auto;
  cursor: default;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid #00D200;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c3:focus {
  border: 4px solid hsl(120,100%,37.1%);
  background: hsl(120,100%,37.1%);
  border-radius: 50%;
}

.c3:active {
  background: hsl(120,100%,37.1%);
  height: 24px;
  width: 24px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
      style={
        Object {
          "background": "linear-gradient(to right, #00D200 50% , #EBEBE8 50%)",
        }
      }
    >
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={50}
        className="c3"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(50% - 16px)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Slider Default 1`] = `
Array [
  .c0 {
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  background: linear-gradient( to right,#0046FF 0% 50%,#EBEBE8 50% 100% );
  height: 12px;
  max-width: 100%;
  width: 100%;
  cursor: default;
}

.c2 {
  max-width: 100%;
  height: 12px;
  position: relative;
  width: calc( 100% - 30px );
  margin: 0 auto;
  cursor: default;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid #0046FF;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c3:focus {
  border-radius: 50%;
}

.c3:active {
  height: 24px;
  width: 24px;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        onClick={[Function]}
        style={
          Object {
            "background": "linear-gradient(to right, #0046FF 50% , #EBEBE8 50%)",
          }
        }
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={50}
          className="c3"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "calc(50% - 16px)",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    50
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Disabled 1`] = `
Array [
  .c0 {
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  background: linear-gradient( to right,#0046FF 0% 50%,#EBEBE8 50% 100% );
  background: #EBEBE8;
  height: 12px;
  max-width: 100%;
  width: 100%;
  cursor: not-allowed;
}

.c2 {
  max-width: 100%;
  height: 12px;
  position: relative;
  width: calc( 100% - 30px );
  margin: 0 auto;
  cursor: not-allowed;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid #0046FF;
  border: 4px solid #EBEBE8;
  cursor: not-allowed;
}

.c3:focus {
  border-radius: 50%;
}

.c3:active {
  height: 24px;
  width: 24px;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        onClick={[Function]}
        style={
          Object {
            "background": "#EBEBE8",
          }
        }
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={50}
          className="c3"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "calc(50% - 16px)",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    50
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Maximum Value 1`] = `
Array [
  .c0 {
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  background: linear-gradient( to right,0% 50%,#EBEBE8 50% 100% );
  height: 12px;
  max-width: 100%;
  width: 100%;
  cursor: default;
}

.c2 {
  max-width: 100%;
  height: 12px;
  position: relative;
  width: calc( 100% - 30px );
  margin: 0 auto;
  cursor: default;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid undefined;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c3:focus {
  border-radius: 50%;
}

.c3:active {
  height: 24px;
  width: 24px;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        onClick={[Function]}
        style={
          Object {
            "background": "linear-gradient(to right, undefined 100% , #EBEBE8 100%)",
          }
        }
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={100}
          className="c3"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "calc(100% - 16px)",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    100
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Minimum Value 1`] = `
Array [
  .c0 {
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  background: linear-gradient( to right,0% 50%,#EBEBE8 50% 100% );
  height: 12px;
  max-width: 100%;
  width: 100%;
  cursor: default;
}

.c2 {
  max-width: 100%;
  height: 12px;
  position: relative;
  width: calc( 100% - 30px );
  margin: 0 auto;
  cursor: default;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid undefined;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c3:focus {
  border-radius: 50%;
}

.c3:active {
  height: 24px;
  width: 24px;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        onClick={[Function]}
        style={
          Object {
            "background": "linear-gradient(to right, undefined 0% , #EBEBE8 0%)",
          }
        }
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="c3"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "calc(0% - 16px)",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    0
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Negative To Positive 1`] = `
Array [
  .c0 {
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  background: linear-gradient( to right,#FF1900 0% 50%,#EBEBE8 50% 100% );
  height: 12px;
  max-width: 100%;
  width: 100%;
  cursor: default;
}

.c2 {
  max-width: 100%;
  height: 12px;
  position: relative;
  width: calc( 100% - 30px );
  margin: 0 auto;
  cursor: default;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid #FF1900;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c3:focus {
  border: 4px solid hsl(5.899999999999977,100%,45%);
  background: hsl(5.899999999999977,100%,45%);
  border-radius: 50%;
}

.c3:active {
  background: hsl(5.899999999999977,100%,45%);
  height: 24px;
  width: 24px;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        onClick={[Function]}
        style={
          Object {
            "background": "linear-gradient(to right, #FF1900 50% , #EBEBE8 50%)",
          }
        }
      >
        <div
          aria-valuemax={50}
          aria-valuemin={-50}
          aria-valuenow={0}
          className="c3"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "calc(50% - 16px)",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    0
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Small Variant 1`] = `
Array [
  .c0 {
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  background: linear-gradient( to right,0% 50%,#EBEBE8 50% 100% );
  height: 4px;
  max-width: 100%;
  width: 100%;
  cursor: default;
}

.c2 {
  max-width: 100%;
  height: 4px;
  position: relative;
  width: calc( 100% - 20px );
  margin: 0 auto;
  cursor: default;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 20px;
  height: 20px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  border: 4px solid undefined;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
}

.c3:focus {
  border-radius: 50%;
}

.c3:active {
  height: 16px;
  width: 16px;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        onClick={[Function]}
        style={
          Object {
            "background": "linear-gradient(to right, undefined 50% , #EBEBE8 50%)",
          }
        }
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={50}
          className="c3"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "left": "calc(50% - 10px)",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    50
     Kronor
  </span>,
]
`;
